# snake-scratch

./: .gitmodules  CMakeLists.txt
glad/include/glad/: gl.h  glad.h
src/: ai.cpp  ai.h  collision.cpp  collision.h  consumption.cpp  consumption.h  core.h  game.cpp  game.h  game_state.cpp  game_state.h  input.cpp  input.h  main.cpp  movement.cpp  movement.h  random.h  renderer.cpp  renderer.h  spawner.cpp  spawner.h
